<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llPopupMenu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llPopupMenu1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btDCCSendFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/send_button"
            android:text="@string/chat_popupmenu_btDCC"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/btWho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/send_button"
            android:text="@string/chat_popupmenu_btWho"
            android:textColor="@color/textColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPopupMenu2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/send_button"
            android:text="@string/chat_popupmenu_btList"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/btVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/send_button"
            android:text="@string/chat_popupmenu_btVoice"
            android:textColor="@color/textColor" />
    </LinearLayout>

</LinearLayout>